syntax = "proto3";

package proto.test;

// ===== Test Messages for Unit Testing =====
 
// 에코 요청 (테스트용)
message EchoReq
{
    string message = 1;         // 에코할 메시지
    int32 timestamp = 2;        // 타임스탬프
}

// 에코 응답
message EchoRes
{
    string message = 1;         // 에코된 메시지
    int32 timestamp = 2;        // 타임스탬프
}
  
 
message CompressMessage
{
  string Content = 1;
  int32 Value = 2; 
}

message ThreadTestMessage
{
  int32 threadId = 1;
  int32 iteration = 2;
  string payload = 3;
}

message LoginGameReq
{
  string ExternalId = 1;
}

message LoginGameRes
{
  bool Success = 1;
}


enum ErrorCode
{
  InvalidError = 0;
  ServerError = 1;
}